--- a/flaskr/templates/table.html
+++ b/flaskr/templates/table.html
@@ -20,7 +20,7 @@
                     <td class="table__cell">{{ user.login }}</td>
                     <td class="table__cell">{{ user.avatar_url }}</td>
                     <td class="table__cell">{{ user.tipo }}</td>
-                    <td class="table__cell">{{ user.profile_url }}</td>
+                    <td class="table__cell"><a href="url">{{ user.profile_url }}</a></td>
                 </tr>
                 {% endfor %}
             </tr>            
