--- a/flaskr/templates/table.html
+++ b/flaskr/templates/table.html
@@ -19,6 +19,7 @@
                     <td class="table__cell">{{ user.id }}</td>
                     <td class="table__cell">{{ user.login }}</td>
                     <td class="table__cell">{{ user.avatar_url }}</td>
+                    <img src="{{ user.avatar_url }}" alt="{{ user.login }}" />
                     <td class="table__cell">{{ user.tipo }}</td>
                     <td class="table__cell"><a href="{{ user.profile_url }}" target="_blank">Profile </a></td>
                 </tr>
