--- a/flaskr/templates/table.html
+++ b/flaskr/templates/table.html
@@ -18,8 +18,7 @@
                 <tr class="table__row">
                     <td class="table__cell">{{ user.id }}</td>
                     <td class="table__cell">{{ user.login }}</td>
-                    <td class="table__cell"> <img src="{{ user.avatar_url }}" alt="{{ user.login }}" /></td>
-                   
+                    <td class="table__cell" style="width: 10%; height: 10%;"> <img src="{{ user.avatar_url }}" alt="{{ user.login }}" /></td>                   
                     <td class="table__cell">{{ user.tipo }}</td>
                     <td class="table__cell"><a href="{{ user.profile_url }}" target="_blank">Profile </a></td>
                 </tr>
