--- a/flaskr/templates/table.html
+++ b/flaskr/templates/table.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title></title>
+        <title>Test Git</title>
         <link rel="stylesheet" href="../static/styles.css" />
+        <h1>f5 for new profiles</h1>
     </head>
     <body>
         <table class="table">
